--- a/src/AppBeacon/app/src/main/res/layout/activity_register.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_register.xml
@@ -8,43 +8,16 @@
     android:elevation="10dip"
     tools:context=".RegisterActivity">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Registrarse"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        tools:ignore="TextContrastCheck" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="217dp"
-        android:layout_height="107dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
-
     <androidx.cardview.widget.CardView
-        android:layout_width="309dp"
-        android:layout_height="435dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="311dp"
+        android:layout_height="698dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -53,17 +26,79 @@
             android:elevation="10dp">
 
             <TextView
+                android:id="@+id/textView5"
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="0dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Registrarse"
+                android:textColor="#024A44"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/matriculaText"
+                android:layout_width="178dp"
+                android:layout_height="31dp"
+                android:layout_below="@+id/switch1"
+                android:layout_alignStart="@+id/switch1"
+                android:layout_alignEnd="@+id/switch1"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/register"
+                android:ems="10"
+                android:hint="Matricula"
+                android:inputType="number"
+                android:paddingStart="5dp"
+                android:textColor="#5f9ea0"
+                android:textSize="14sp"
+                android:visibility="invisible" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName10"
+                android:layout_width="260dp"
+                android:layout_height="31dp"
+                android:layout_below="@+id/textView34"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/register"
+                android:ems="10"
+                android:inputType="number"
+                android:paddingStart="5dp"
+                android:textColor="#5f9ea0"
+                android:textSize="14sp" />
+
+            <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="50dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Nombre:"
                 android:textColor="#024A44"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextTextPersonName3"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Apellidos:"
+                android:textColor="#024A44"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -80,21 +115,37 @@
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
                 android:textColor="#5f9ea0"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName7"
+                android:layout_width="260dp"
+                android:layout_height="31dp"
+                android:layout_below="@+id/textView24"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/register"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:paddingStart="5dp"
+                android:textColor="#5f9ea0"
+                android:textSize="14sp"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editTextTextPersonName3"
+                android:layout_below="@+id/editTextTextPersonName7"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Correo:"
                 android:textColor="#024A44"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -111,7 +162,7 @@
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
                 android:textColor="#5f9ea0"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <TextView
@@ -125,7 +176,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="Contraseña:"
                 android:textColor="#024A44"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -141,7 +192,7 @@
                 android:inputType="textPassword"
                 android:paddingStart="5dp"
                 android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textView15"
@@ -154,7 +205,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="Confirmar contraseña:"
                 android:textColor="#024A44"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -170,7 +221,7 @@
                 android:inputType="textPassword"
                 android:paddingStart="5dp"
                 android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -183,7 +234,21 @@
                 android:fontFamily="@font/montserrat"
                 android:text="Edad:"
                 android:textColor="#024A44"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView34"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:layout_below="@+id/editTextTextPersonName6"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Telefono:"
+                android:textColor="#024A44"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -192,24 +257,24 @@
                 android:layout_height="31dp"
                 android:layout_below="@+id/textView16"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/register"
                 android:ems="10"
                 android:inputType="number"
                 android:paddingStart="5dp"
                 android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="113dp"
-                android:layout_height="38dp"
+                android:layout_width="178dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="97dp"
-                android:layout_marginEnd="98dp"
+                android:layout_marginEnd="90dp"
                 android:layout_marginBottom="15dp"
                 android:backgroundTint="#5f9ea0"
                 android:fontFamily="@font/abel"
@@ -218,6 +283,21 @@
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 tools:ignore="TouchTargetSizeCheck" />
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="158dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editTextTextPersonName10"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/montserrat"
+                android:onClick="onclick"
+                android:text="¿Es autobusero?"
+                android:textColor="#024A44"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
