--- a/src/AppBeacon/app/src/main/res/layout/fragment_user.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_user.xml
@@ -9,8 +9,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="328dp"
-        android:layout_height="415dp"
+        android:layout_width="342dp"
+        android:layout_height="500dp"
         android:layout_marginTop="30dp"
 
         app:cardCornerRadius="9dp"
@@ -19,148 +19,189 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/relativeLayout2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="499dp"
             android:background="#E2F2F3">
 
+            <Button
+                android:id="@+id/btnEditarUsuario"
+                android:layout_width="189dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="68dp"
+                android:layout_marginEnd="65dp"
+                android:layout_marginBottom="100dp"
+                android:backgroundTint="#5f9ea0"
+                android:fontFamily="@font/montserrat"
+                android:onClick="showPopup"
+                android:shadowRadius="3"
+                android:text="Editar Perfil"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                app:cornerRadius="7dip"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.45"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView4"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Nombre de usuario:"
-                android:textColor="#36696A"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:text="Mail:"
+                android:textColor="#024A44"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView8"
+                app:layout_constraintStart_toStartOf="@+id/textView42"
+                app:layout_constraintTop_toBottomOf="@+id/textView42" />
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView7"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/montserrat"
+                android:layout_marginStart="32dp"
+                android:text="Nombre:"
+                android:textColor="#024A44"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView42"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            <TextView
+                android:id="@+id/textView42"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apellidos:"
+                android:textColor="#024A44"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/textView17"
+                app:layout_constraintTop_toBottomOf="@+id/textView17" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Edad:"
-                android:textColor="#36696A"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textColor="#024A44"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="40dp"
-                android:fontFamily="@font/montserrat"
-                android:text="Correo:"
-                android:textColor="#36696A"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="189dp"
-                android:layout_height="58dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="68dp"
-                android:layout_marginEnd="65dp"
-                android:layout_marginBottom="40dp"
-                android:backgroundTint="#5f9ea0"
-                android:fontFamily="@font/montserrat"
-                android:shadowRadius="3"
-                android:text="Editar información"
-                android:textAllCaps="false"
-                android:textColor="#FFFFFF"
+                android:text="Teléfono"
+                android:textColor="#024A44"
+                android:textSize="14sp"
                 android:textStyle="bold"
-                app:cornerRadius="7dip" />
+                app:layout_constraintBottom_toTopOf="@+id/btnEditarUsuario"
+                app:layout_constraintStart_toStartOf="@+id/textView8"
+                app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
             <TextView
-                android:id="@+id/textView8"
-                android:layout_width="226dp"
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView18"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/montserrat"
-                android:text="User123"
-                android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:layout_marginTop="8dp"
+                android:text="Información del Usuario"
+                android:textColor="#024A44"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView4"
-                android:layout_width="226dp"
+                android:id="@+id/infoUsuarioNombre"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView17"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/montserrat"
-                android:text="29 años"
-                android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/textView17"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView17"
+                app:layout_constraintTop_toTopOf="@+id/textView17" />
 
             <TextView
-                android:id="@+id/textView7"
-                android:layout_width="226dp"
+                android:id="@+id/infoUsuarioApellidos"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView10"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/montserrat"
-                android:text=" usuario@correo.com"
-                android:textColor="#5f9ea0"
-                android:textSize="16sp" />
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/textView42"
+                app:layout_constraintStart_toStartOf="@+id/infoUsuarioNombre"
+                app:layout_constraintTop_toTopOf="@+id/textView42" />
 
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/infoUsuarioMail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/infoUsuarioApellidos"
+                app:layout_constraintTop_toTopOf="@+id/textView7" />
+
+            <TextView
+                android:id="@+id/infoUsuarioEdad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/textView8"
+                app:layout_constraintStart_toStartOf="@+id/infoUsuarioMail"
+                app:layout_constraintTop_toTopOf="@+id/textView8" />
+
+            <TextView
+                android:id="@+id/infoUsuarioTelefono"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/infoUsuarioEdad"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <TextView
+                android:id="@+id/tvCerrarSesión"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Cerrar Sesión"
+                android:textColor="@color/rojo"
+                app:layout_constraintEnd_toEndOf="@+id/btnEditarUsuario"
+                app:layout_constraintStart_toStartOf="@+id/btnEditarUsuario"
+                app:layout_constraintTop_toBottomOf="@+id/btnEditarUsuario" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/relativeLayout"
         android:layout_width="413dp"
-        android:layout_height="164dp"
+        android:layout_height="50dp"
         android:background="@drawable/fondouser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvNombreUsuario"
             android:layout_width="187dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="29dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginBottom="17dp"
             android:fontFamily="@font/montserrat"
             android:text="Nombre de usuario"
             android:textColor="#FFFFFF"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="121dp"
-            android:layout_height="90dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="245dp"
-            android:layout_marginTop="41dp"
-            android:layout_marginEnd="47dp"
-            android:layout_marginBottom="33dp"
-            android:src="@drawable/fotoperf" />
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
